--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -75,18 +75,22 @@ main{
     margin: 0 auto;
 }
 
+.section{
+    margin-top: 130px;
+}
+
 /* section area */
 .about{
-    margin-top: 130px;
     background: #fff8f3;
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
 }
 .section-title{
+    text-align: center;
     margin-bottom: 30px;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 
 }
 .section-description{
@@ -109,3 +113,31 @@ main{
     font-size: 20px;
     color: #474747;
 }
+/* What I do styles */
+.what-i-do{
+    text-align: center;
+
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0,0,0,0.06);
+    border-radius: 5px;
+    padding: 30px
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill-title{
+    
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color: #757575;
+}
+
+/* Resume related style */
+
