--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -141,3 +141,55 @@ main{
 
 /* Resume related style */
 
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-content .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+
+}
+.resume-content .sub-title{
+    color: #757575; 
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume-content .description{
+    color: #757575;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+    
+}
+
+/* contact style */
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFFFFF;
+    padding: 130px 200px;
+}
+.contact .section-title{
+    text-align: left;
+}
+.contact input[type="text"],input[type="email"] ,textarea{
+    margin-bottom: 24px;
+    border: 0px;
+    width: 100%;
+    padding: 18px 30px;
+}
+input{
+    height: 64px;
+}
+.contact a{
+    text-decoration: none;
+}
